# minchain

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: rust.yml
src/: connection_manager.rs  main.rs  server_core.rs
src/blockchain/: block.rs  blockchain.rs  chain.rs
src/core/: client.rs  client_core.rs  cs.rs  mod.rs  server.rs  server_core.rs  state.rs
src/crypt/: sha.rs
src/p2p/: connection_manager.rs  connection_manager_4edge.rs  core_node_list.rs  edge_node_list.rs  message.rs  message_manager.rs  mod.rs  node_list.rs  protocol_handler.rs
src/transaction/: pool.rs
