[package]
name = "mincoin"
version = "0.1.0"
authors = ["matken11235 <26405363+matken11235@users.noreply.github.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "0.11.0"
ctrlc = { version = "3.1", features = ["termination"] }
chrono = "0.4.19"
crypto-hash = "0.3.4"
