[package]
name = "mincoin"
version = "0.1.0"
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0.12"
ctrlc = { version = "3.2", features = ["termination"] }
chrono = "0.4.19"
crypto-hash = "0.3.4"
