[package]
name = "mincoin"
version = "0.1.0"
edition = "2021"
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
clap = { version = "4.0", features = ["derive"] }
crypto-hash = "0.3.4"
ctrlc = { version = "3.2", features = ["termination"] }
semver = "1.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
